Implementação dos servicos do agendamento
